tests/error_corpus/validation_errors/not_implemented/E703_unexpected_mor_node.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	Expected error: E703 (Unexpected morphology node)
@Comment:	Trigger: Invalid morphology format
*CHI:	hello .
%mor:	||||| .
@End
