tests/error_corpus/parse_errors/E302_missing_node.cha
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	Expected error: E302 (Missing required node)
@Comment:	Trigger: Speaker code format invalid
*ch:	hello .
@End
